--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 
 <app-header></app-header>
-<!--<router-outlet></router-outlet>-->
+<!--<router-outlet></router-outlet>
 <app-ejemplo></app-ejemplo>
+<app-user></app-user>-->
+<app-rol></app-rol>
 
