--- a/src/app/componentes/rol/rol.component.html
+++ b/src/app/componentes/rol/rol.component.html
@@ -1,7 +1,7 @@
 <div>
     <h1 class="text-center">{{titulo}}</h1>
     <h1 class="text-center">{{mensaje}}</h1>
-    <table>
+    <table class="table table-stripped table-bordered">
 
         <tr>
             <th class="text-center">ROLES</th>
