--- a/src/app/componentes/modal-profiles/modal-profiles.component.html
+++ b/src/app/componentes/modal-profiles/modal-profiles.component.html
@@ -1,6 +1,6 @@
 
 <!-- The Modal -->
-<div class="modal" id="myModal">
+<div class="modal" id="myModal" (hidden.bs.modal)="resetFields()">
     <div class="modal-dialog">
         <div class="modal-content">
             <!-- Modal Header -->
