--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 
 <app-header></app-header>
 <!--<router-outlet></router-outlet>-->
-<app-subcategory></app-subcategory>
-
-
-
-
+<!--<app-subcategory></app-subcategory>-->
+<!--<app-card-type></app-card-type>-->
+<app-document-types></app-document-types>
