--- a/src/app/panel-administrador/panel-administrador.component.html
+++ b/src/app/panel-administrador/panel-administrador.component.html
@@ -5,11 +5,11 @@
 
   <select class="form-select" aria-label="Default select example" #select (change)="consultarTabla(select.value)">
     <option selected>Open this select menu</option>
-    <option value="awardFine">AwardsFine</option>
+    <option value="awardsFines">AwardsFine</option>
     <option value="awardsFinesConfigurations">AwardsFinesConfiguration</option>
     <option value="awardsFinesTypes">AwardFinesType</option>
     <option value="configurations">Configuration</option>
-    <option value="currentAccounts">CurrentAccount</option>
+    <option value="currentsAccounts">CurrentAccount</option>
     <option value="descriptions">Description</option>
     <option value="fees">Fee</option>
     <option value="identificationsTypes">IdentificationsType</option>
@@ -17,7 +17,7 @@
     <option value="roles">Rol</option>
     <option value="transactions">Transaction</option>
     <option value="transactionsAwardsFines">TransactionsAwardsFine</option>
-    <option value="typeAccounts">TypeAccount</option>
+    <option value="typesAccounts">TypeAccount</option>
     <option value="users">User</option>
   </select>
   <h2>{{ tablaAConsultar }} </h2>
