--- a/src/app/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/hazte-cliente/hazte-cliente.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!--<div-- class="container">
     <form>
       <div class="row">
         <div class="col">
@@ -32,4 +32,4 @@
         </div>
       </div>
     </form>
-  </div>
+  </div-->
