--- a/src/app/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/hazte-cliente/hazte-cliente.component.html
@@ -1,35 +1,37 @@
-<!--<div-- class="container">
-    <form>
-      <div class="row">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Introduce tu Nombre" id="nombre" [(ngModel)]="nombre"
-            required>
-        </div>
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Apellidos" id="apellidos" [(ngModel)]="apellidos"
-            required>
-        </div>
+<div class="container">
+  <form>
+    <div class="row">
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Introduce tu Nombre" id="nombre" [(ngModel)]="nombre"
+          required>
       </div>
-      <div class="row">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Documento de Identidad" id="documentodeidentidad"
-            [(ngModel)]="documentodeidentidad" required>
-        </div>
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Apellidos" id="apellidos" [(ngModel)]="apellidos" required>
       </div>
-      <div class="row">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Introduce tu Email" id="email" [(ngModel)]="email"
-            required>
-        </div>
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Introduce Numero de telefono" id="telefono"
-            [(ngModel)]="telefono" required>
-        </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Documento de Identidad" id="documentodeidentidad"
+          [(ngModel)]="documentodeidentidad" required>
       </div>
-      <div class="row">
-        <div class="col">
-          <button class="btn btn-primary" type="submit">Enviar</button>
-        </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Introduce tu Email" id="email" [(ngModel)]="email"
+          required>
       </div>
-    </form>
-  </div-->
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Introduce Numero de telefono" id="telefono"
+          [(ngModel)]="telefono" required>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+      </div>
+      <button (click)="sacarEmail()">comprobar</button>
+    </div>
+
+
+  </form>
+
+</div>
